--- a/package.json
+++ b/package.json
@@ -1,4 +1,19 @@
 {
+  "name": "fuzzy-finder",
+  "version": "0.0.0",
   "main": "./lib/fuzzy-finder",
-  "description": "Open an editor to a file in the project with `cmd-t`."
+  "description": "Open an editor to a file in the project with `cmd-t`.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/atom/fuzzy-finder.git"
+  },
+  "bugs": {
+    "url": "https://github.com/atom/fuzzy-finder/issues"
+  },
+  "engines": {
+    "atom": "*"
+  },
+  "publishConfig": {
+    "registry": "https://atom.iriscouch.com/registry/_design/app/_rewrite"
+  }
 }
