--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "https://github.com/atom/fuzzy-finder.git"
   },
+  "dependencies": {
+    "humanize-plus": "~1.4.2"
+  },
   "bugs": {
     "url": "https://github.com/atom/fuzzy-finder/issues"
   },
