--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "./lib/fuzzy-finder",
   "description": "Open an editor to a file in the project with `cmd-t`.",
   "repository": "https://github.com/atom/fuzzy-finder",
+  "license": "MIT",
   "dependencies": {
     "humanize-plus": "~1.4.2"
   },
