--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "humanize-plus": "~1.4.2",
     "temp": "~0.6.0",
     "underscore-plus": "1.x",
-    "wrench": "^1.5"
+    "wrench": "^1.5",
+    "minimatch": "git://github.com/kevinsawicki/minimatch.git#f2af9b4a7addd8c91365ab901b5b367b40483061"
   },
   "engines": {
     "atom": "*"
