--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fuzzy-finder",
   "version": "0.50.0",
-  "main": "./lib/fuzzy-finder",
+  "main": "./lib/main",
   "description": "Open an editor to a file in the project with `cmd-t`.",
   "repository": "https://github.com/atom/fuzzy-finder",
   "license": "MIT",
