--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "minimatch": "git://github.com/kevinsawicki/minimatch.git#f2af9b4a7addd8c91365ab901b5b367b40483061",
     "temp": "~0.6.0",
     "underscore-plus": "1.x",
-    "wrench": "^1.5"
+    "wrench": "^1.5",
+    "fuzzaldrin": "^1.1"
   },
   "engines": {
     "atom": "*"
