Install works behind firewalls
Configuration for where git:// is blocked.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "fs-plus": "2.x",
     "humanize-plus": "~1.4.2",
-    "minimatch": "git://github.com/kevinsawicki/minimatch.git#f2af9b4a7addd8c91365ab901b5b367b40483061",
+    "minimatch": "git+https://github.com/kevinsawicki/minimatch.git#f2af9b4a7addd8c91365ab901b5b367b40483061",
     "temp": "~0.6.0",
     "underscore-plus": "1.x",
     "wrench": "^1.5"
