--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "async": "0.2.6",
     "atom-space-pen-views": "^2.0.0",
     "fs-plus": "^2.0.0",
+    "fuzzaldrin": "^2.0",
     "humanize-plus": "~1.4.2",
     "minimatch": "~0.3.0",
     "temp": "~0.8.1",
