Use scandal to build the project file list
Atom core has scandal, which is _all about_ building a list of files
in a fairly efficient manner, and thinking about VCS issues and
symbolic links and whatnot. Instead of reimplementing pieces of that,
just use it.

This has the nice side-effect of fixing issue #111, because scandal is
better at deciding which files should be ignored.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fuzzaldrin-plus": "^0.1",
     "humanize-plus": "~1.4.2",
     "minimatch": "~0.3.0",
+    "scandal": "^2.2",
     "temp": "~0.8.1",
     "underscore-plus": "^1.0.0",
     "wrench": "^1.5"
