--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "fs-plus": "^2.0.0",
     "fuzzaldrin": "^2.0",
     "fuzzaldrin-plus": "^0.1",
+    "git-utils": "^4.0",
     "humanize-plus": "~1.4.2",
     "minimatch": "~0.3.0",
     "scandal": "^2.2",
