--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "searchSelectedText": {
       "type": "boolean",
       "default": false,
-      "description": "When fuzzy finder opens, initialize it with the text selected in the active tab."
+      "description": "When file finder opens, initialize it with the text selected in the active tab."
     },
     "useAlternateScoring": {
       "type": "boolean",
