Add logic to consume file-icons service

--- a/package.json
+++ b/package.json
@@ -23,6 +23,13 @@
   "devDependencies": {
     "coffeelint": "^1.9.7"
   },
+  "consumedServices": {
+    "atom.file-icons": {
+      "versions": {
+        "1.0.0": "consumeFileIcons"
+      }
+    }
+  },
   "configSchema": {
     "ignoredNames": {
       "type": "array",
