--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "async": "0.2.6",
-    "atom-select-list": "0.0.16",
+    "atom-select-list": "^0.1.0",
     "fs-plus": "^3.0.0",
     "fuzzaldrin": "^2.0",
     "fuzzaldrin-plus": "^0.4.1",
