Fix wrong editor being initially selected when confirming selection

--- a/package.json
+++ b/package.json
@@ -65,10 +65,10 @@
       "default": false,
       "description": "Search all panes when opening files. If disabled, only the active pane is searched. Holding `shift` inverts this setting."
     },
-    "allowPendingPaneItems": {
+    "preserveLastSearch": {
       "type": "boolean",
       "default": false,
-      "description": "Allow the selected item to be previewed without permanently adding it to the pane."
+      "description": "Remember the typed query when closing the fuzzy finder and use that as the starting query next time the fuzzy finder is opened."
     },
     "useAlternateScoring": {
       "type": "boolean",
@@ -79,6 +79,11 @@
       "type": "boolean",
       "default": false,
       "description": "Prefills search query with selected in current editor text"
+    },
+    "allowPendingPaneItems": {
+      "type": "boolean",
+      "default": false,
+      "description": "Allow the selected item to be previewed without permanently adding it to the pane."
     }
   }
 }
