--- a/package.json
+++ b/package.json
@@ -80,8 +80,8 @@
     },
     "scoringSystem": {
       "type": "string",
-      "default": "alternate",
-      "description": "Scoring system to use. \"standard\" is the system used by other modals in Atom. \"alternate\" is an improved scoring system. \"fast\" is a much faster system, specially suitable for large projects. Default: \"alternate\"",
+      "default": "fast",
+      "description": "Scoring system to use. \"standard\" is the system used by other modals in Atom. \"alternate\" is an improved scoring system. \"fast\" is a much faster system, specially suitable for large projects. Default: \"fast\"",
       "enum": [
         "standard",
         "alternate",
@@ -90,8 +90,8 @@
     },
     "useRipGrep": {
       "type": "boolean",
-      "default": false,
-      "description": "Use the experimental `ripgrep` crawler. This will substantially speed up the indexing process on large projects."
+      "default": true,
+      "description": "Use the substantially faster `ripgrep` crawler."
     },
     "prefillFromSelection": {
       "type": "boolean",
